--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,4 +20,4 @@ jobs:
 
     - name: Deploy to Azure
       run: |
-        curl --silent --output /dev/null -X POST -u ${{ secrets.deployUsername }}:${{ secrets.deployPassword }} --data-binary @"webapp.zip" https://lacxi.scm.azurewebsites.net/api/zipdeploy     
+        curl -X POST -u ${{ secrets.deployUsername }}:${{ secrets.deployPassword }} --data-binary @webapp.zip https://lacxi.scm.azurewebsites.net/api/zipdeploy     
